correction problème d'alignement des commentaires

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,6 @@ footer.footer{
 p{
     font-family: $font-family-serif;
     font-size: 18px;
-    text-align: justify;
 }
 
 .hero-scene-content{
